# e-Backend

./: .env  .env.example  .gitignore  README.md  check_constraints.py  check_dropship_table.py  check_media.py  check_orderitem_table.py  check_table.py  check_tables.py  check_users.py  cleanup_database.sh  cleanup_with_constraints.py  clear_test_data.py  compare_fields.py  create_test_user.py  db.sqlite3  direct_cleanup.py  discover_tables.py  fix_orderitem_manual.py  fix_products.py  gunicorn.conf.py  manage.py  pyproject.toml  remote_cleanup.py  render.yaml  requirements.txt  simple_cleanup.py  start.sh  test_api.py  test_endpoint.py  test_import.py  test_my_products.py  test_order_model.py  test_order_serializer.py  test_orders.py  test_product_create.py  test_product_create2.py  test_product_create3.py  test_signup.py  (+1 more)
accounts/: admin.py  models.py  serializers.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_alter_user_groups.py  0002_user_logo.py
backend/: settings.py  urls.py  wsgi.py
ecom/: settings.py  urls.py
shop/: admin.py  admin_views.py  models.py  serializers.py  urls.py  views.py
shop/migrations/: 0001_initial.py  0002_drop_vendor_from_shop.py  0002_product_stock.py  0003_product_is_active.py  0003_remove_product_image_url_product_image.py  0004_product_created_at_product_updated_at.py  0004_shop_product_shop.py  0005_auto_20250920_1919.py  0005_order_dropshipper_shop_order_shipping_address_and_more.py  0006_auto_20250920_1941.py  0006_cart_cartitem.py  0007_auto_20250920_1947.py  0008_fix_orderitem_columns.py  (+1 more)
(+1 files in other folders)
